--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/goloroden/cases.git"
+    "url": "git://github.com/thenativeweb/cases.git"
   },
   "license": "MIT"
 }
