--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     {
       "name": "Golo Roden",
       "email": "golo.roden@thenativeweb.io"
+    },
+    {
+      "name": "Matthias Wagler",
+      "email": "matthias.wagler@thenativeweb.io"
     }
   ],
   "main": "./lib/cases.js",
@@ -13,9 +17,9 @@
     "async": "0.9.0"
   },
   "devDependencies": {
+    "assertthat": "0.5.3",
     "grunt": "0.4.5",
-    "node-assertthat": "0.2.2",
-    "tourism": "0.9.3"
+    "tourism": "0.14.1"
   },
   "scripts": {
     "test": "mocha"
@@ -24,5 +28,10 @@
     "type": "git",
     "url": "git://github.com/thenativeweb/cases.git"
   },
+  "keywords": [
+    "mocha",
+    "tdd",
+    "test"
+  ],
   "license": "MIT"
 }
